Scripts updated for set 8.5

--- a/src/main/resources/traits.properties
+++ b/src/main/resources/traits.properties
@@ -1,55 +1,86 @@
-nbTraits=27
+nbTraits=28
 trait0=Ace
 trait1=Admin
 trait2=Aegis
 trait3=AnimaSquad
-trait4=Arsenal
-trait5=Brawler
-trait6=Civilian
-trait7=Corrupted
-trait8=Defender
-trait9=Duelist
-trait10=Forecaster
-trait11=Gadgeteen
-trait12=Hacker
-trait13=Heart
-trait14=LaserCorps
-trait15=Mascot
-trait16=MechPrime
-trait17=OxForce
+trait4=Brawler
+trait5=Corrupted
+trait6=Defender
+trait7=Duelist
+trait8=Forecaster
+trait9=Gadgeteen
+trait10=Hacker
+trait11=Heart
+trait12=InfiniTeam
+trait13=LaserCorps
+trait14=Mascot
+trait15=MechPrime
+trait16=OxForce
+trait17=Parallel
 trait18=Prankster
-trait19=Recon
+trait19=Quickdraw
 trait20=Renegade
-trait21=SpellSlinger
-trait22=StarGuardian
-trait23=Supers
-trait24=Sureshot
-trait25=Threat
-trait26=Underground
+trait21=Riftwalker
+trait22=SpellSlinger
+trait23=StarGuardian
+trait24=Supers
+trait25=Sureshot
+trait26=Threat
+trait27=Underground
 traitfromapi0=Set8_Ace
 traitfromapi1=Set8_Admin
 traitfromapi2=Set8_Aegis
 traitfromapi3=Set8_AnimaSquad
-traitfromapi4=Set8_Arsenal
-traitfromapi5=Set8_Brawler
-traitfromapi6=Set8_Civilian
-traitfromapi7=Set8_Corrupted
-traitfromapi8=Set8_Defender
-traitfromapi9=Set8_Duelist
-traitfromapi10=Set8_Forecaster
-traitfromapi11=Set8_GenAE
-traitfromapi12=Set8_Hacker
-traitfromapi13=Set8_Heart
-traitfromapi14=Set8_SpaceCorps
-traitfromapi15=Set8_Mascot
-traitfromapi16=Set8_ExoPrime
-traitfromapi17=Set8_OxForce
+traitfromapi4=Set8_Brawler
+traitfromapi5=Set8_Corrupted
+traitfromapi6=Set8_Defender
+traitfromapi7=Set8_Duelist
+traitfromapi8=Set8_Forecaster
+traitfromapi9=Set8_GenAE
+traitfromapi10=Set8_Hacker
+traitfromapi11=Set8_Heart
+traitfromapi12=Set8_Pulsefire
+traitfromapi13=Set8_SpaceCorps
+traitfromapi14=Set8_Mascot
+traitfromapi15=Set8_ExoPrime
+traitfromapi16=Set8_OxForce
+traitfromapi17=Set8_Parallel
 traitfromapi18=Set8_Prankster
-traitfromapi19=Set8_Recon
+traitfromapi19=Set8_GunMage
 traitfromapi20=Set8_Renegade
-traitfromapi21=Set8_Channeler
-traitfromapi22=Set8_StarGuardian
-traitfromapi23=Set8_Supers
-traitfromapi24=Set8_Deadeye
-traitfromapi25=Set8_Threat
-traitfromapi26=Set8_UndergroundThe
+traitfromapi21=Set8_Riftwalker
+traitfromapi22=Set8_Channeler
+traitfromapi23=Set8_StarGuardian
+traitfromapi24=Set8_Supers
+traitfromapi25=Set8_Deadeye
+traitfromapi26=Set8_Threat
+traitfromapi27=Set8_UndergroundThe
+trait0treshholds=1/4
+trait1treshholds=2/4/6
+trait2treshholds=2/3/4/5
+trait3treshholds=3/5/7
+trait4treshholds=2/4/6/8
+trait5treshholds=1
+trait6treshholds=2/4/6
+trait7treshholds=2/4/6/8
+trait8treshholds=1
+trait9treshholds=3/5
+trait10treshholds=2/3/4/5
+trait11treshholds=2/4/6
+trait12treshholds=3/5/7
+trait13treshholds=3/4/5/6
+trait14treshholds=2/4/6
+trait15treshholds=3/5
+trait16treshholds=2/4/6
+trait17treshholds=2
+trait18treshholds=2/3/4
+trait19treshholds=2/3/4
+trait20treshholds=3/5/7
+trait21treshholds=3
+trait22treshholds=2/4/6/8
+trait23treshholds=2/4/6/8
+trait24treshholds=3
+trait25treshholds=1
+trait26treshholds=1/2/3/4/5/6/7/8
+trait27treshholds=3/4/5/6
+
